# course-prodml

./: .gitignore
0_alvaro_implementation/: .env  collection.py  config.py  db_model.py  main.py  model.py  model_service.py  pyproject.toml  runner.py
0_alvaro_implementation/src/config/: .env  config.py
0_alvaro_implementation/src/db/: db_model.py
0_alvaro_implementation/src/model/pipeline/: collection.py
0_alvaro_implementation/src/tests/: check_executable.py  logging_test.py
